--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,7 +4,7 @@ http {
   server {
     listen 80;
 
-    # Serve frontend
+    # Frontend
     location / {
       proxy_pass http://frontend_nextjs:3000;
       proxy_http_version 1.1;
@@ -14,9 +14,10 @@ http {
       proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Proxy backend API
+    # Backend (through /api prefix)
     location /api/ {
-      proxy_pass http://backend_nestjs:4000/;
+      rewrite ^/api/(.*)$ /$1 break;
+      proxy_pass http://backend_nestjs:4000;
       proxy_http_version 1.1;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
