--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,17 +13,18 @@ services:
     volumes:
       - ./db-data:/var/lib/postgresql/data
   
-  pgadmin:
-    image: dpage/pgadmin4
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@email.com
-      PGADMIN_DEFAULT_PASSWORD: adminpass
-    ports:
-      - "8080:80"
-    volumes:
-      - ./pgadmin4/servers.json:/pgadmin4/servers.json
-    networks:
-      - lsib-network
+  # pgadmin:
+  #   image: dpage/pgadmin4
+  #   environment:
+  #     PGADMIN_DEFAULT_EMAIL: admin@email.com
+  #     PGADMIN_DEFAULT_PASSWORD: adminpass
+  #   ports:
+  #     - "8080:80"
+  #   volumes:
+  #     - ./pgadmin4/servers.json:/pgadmin4/servers.json
+  #   networks:
+  #     - lsib-network
+
   server:
     build: ./lsi-kintai-nestjs-backend
     hostname: backend_nestjs
@@ -32,6 +33,8 @@ services:
       - /app/node_modules
     expose:
     - "4000" 
+    ports:
+      - "4000:4000"
     networks:
       - lsib-network
     depends_on:
@@ -45,22 +48,24 @@ services:
       - /app/node_modules
     expose:
       - "3000"
-    networks:
-      - lsib-network
-    depends_on:
-      - server
-  www:
-    image: nginx:latest
-    container_name: nginx_proxy
     ports:
-      - "80:80"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-    depends_on:
-      - client
-      - server
+      - "3000:3000"
     networks:
       - lsib-network
+    depends_on:
+      - server
+  # www:
+  #   image: nginx:latest
+  #   container_name: nginx_proxy
+  #   ports:
+  #     - "80:80"
+  #   volumes:
+  #     - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+  #   depends_on:
+  #     - client
+  #     - server
+  #   networks:
+  #     - lsib-network
 
 networks:
   lsib-network:
