--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,6 +1,10 @@
 :80 {
     encode gzip
-    
+
+    handle_path /api/* {
+        reverse_proxy backend_nestjs:4000
+    }
+
     handle {
         reverse_proxy frontend_nextjs:3000
     }
