--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   dev-db:
     image: postgres:15
@@ -8,34 +6,25 @@ services:
       POSTGRES_USER: devuser
       POSTGRES_PASSWORD: devpass
       POSTGRES_DB: devdb
-    ports:
-      - "5434:5432"
+    expose:
+      - "5432"
     volumes:
       - ./db-data:/var/lib/postgresql/data
     networks:
       - lsib-network
 
-  pgadmin:
-    image: dpage/pgadmin4
-    container_name: pgadmin
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@email.com
-      PGADMIN_DEFAULT_PASSWORD: adminpass
-    ports:
-      - "8080:80"
-    volumes:
-      - ./pgadmin4/servers.json:/pgadmin4/servers.json
-    depends_on:
-      - dev-db
-    networks:
-      - lsib-network
-
-  server:
+  backend_nestjs:
     build: ./lsi-kintai-nestjs-backend
     container_name: backend_nestjs
     volumes:
       - ./lsi-kintai-nestjs-backend:/app
       - /app/node_modules
+    environment:
+      DATABASE_URL: "postgresql://devuser:devpass@dev-db:5432/devdb?schema=public"
+      JWT_SECRET: "LSI_KINTAI_SECRET_KEY"
+      JWT_EXPIRES_IN: "3600s"
+      FRONTEND_URL: "http://frontend_nextjs:3000"
+      PORT: 4000
     expose:
       - "4000"
     networks:
@@ -43,32 +32,48 @@ services:
     depends_on:
       - dev-db
 
-  client:
+  frontend_nextjs:
     build: ./lsi-kintai-nextjs-frontend
     container_name: frontend_nextjs
     volumes:
       - ./lsi-kintai-nextjs-frontend:/app
       - /app/node_modules
+    environment:
+      NEXT_PUBLIC_API_URL: "http://localhost:5001/api"
+      IP_HOST_URL: "http://192.168.3.4:3000"
     expose:
       - "3000"
     networks:
       - lsib-network
     depends_on:
-      - server
+      - backend_nestjs
 
-  caddy:
-    image: caddy:latest
-    container_name: caddy_proxy
+  nginx_proxy:
+    image: nginx:latest
+    container_name: lsi-kintai-crimson-sun
     ports:
-      - "80:80"
-      - "443:443"
+      - "5001:5001"
     volumes:
-      - ./caddy/Caddyfile:/etc/caddy/Caddyfile:ro
-    depends_on:
-      - client
-      - server
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     networks:
       - lsib-network
+    depends_on:
+      - frontend_nextjs
+      - backend_nestjs
+
+  # caddy:
+  #   image: caddy:latest
+  #   container_name: caddy_proxy
+  #   ports:
+  #     - "80:80"
+  #     - "443:443"
+  #   volumes:
+  #     - ./caddy/Caddyfile:/etc/caddy/Caddyfile:ro
+  #   depends_on:
+  #     - client
+  #     - server
+  #   networks:
+  #     - lsib-network
 
 networks:
   lsib-network:
