--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       DATABASE_URL: "postgresql://devuser:devpass@dev-db:5432/devdb?schema=public"
       JWT_SECRET: "LSI_KINTAI_SECRET_KEY"
       JWT_EXPIRES_IN: "3600s"
-      FRONTEND_URLS: "http://localhost:5001,http://192.168.3.4:5001"
+      FRONTEND_URLS: "http://localhost:5001,http://192.168.3.4:5001,http://localhost"
       PORT: 4000
     expose:
       - "4000"
@@ -39,7 +39,7 @@ services:
       - ./lsi-kintai-nextjs-frontend:/app
       - /app/node_modules
     environment:
-      NEXT_PUBLIC_API_URL: "http://192.168.3.4:5001/api"
+      NEXT_PUBLIC_API_URL: "http://localhost/api"
       IP_HOST_URL: "http://192.168.3.4:3000"
     expose:
       - "3000"
@@ -51,30 +51,22 @@ services:
   nginx_proxy:
     image: nginx:alpine
     container_name: lsi-kintai-crimson-sun
-    ports:
-      - "5001:5001"
+    expose:
+      - "5001"
+    # ports:
+    #   - "5001:5001"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     networks:
       - lsib-network
+      - caddy-network
     depends_on:
       - frontend_nextjs
       - backend_nestjs
 
-  # caddy:
-  #   image: caddy:latest
-  #   container_name: caddy_proxy
-  #   ports:
-  #     - "80:80"
-  #     - "443:443"
-  #   volumes:
-  #     - ./caddy/Caddyfile:/etc/caddy/Caddyfile:ro
-  #   depends_on:
-  #     - client
-  #     - server
-  #   networks:
-  #     - lsib-network
-
 networks:
   lsib-network:
     driver: bridge
+  caddy-network:
+    external: true
+    name: caddy-proxy-network
